--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: John Doe # your name (or website title) here
+title: Shreya Nair # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Previously at Accenture, an Insights Analyst with 4+ years of experience in Finance and Banking industry. Proficient in Python, SQL, Power BI and Tableau, I excel at analyzing large datasets to provide valuable insights and effectively communicate the findings.
   <br><br>
   Second description 
   <br><br>
